# mini-sql

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mini-sqlConfig.cmake.in
.github/workflows/: cd.yml  ci.yml
consumer/: CMakeLists.txt  main.cpp
include/minisql/: connection.hpp  field.hpp  field_types.def  minisql_export.hpp  row.hpp  row_iterator.hpp  row_set.hpp  script_reader.hpp  varchar.hpp
src/: byte_io.hpp  connection.cpp  connection.hpp  cursor.cpp  cursor.hpp  database.cpp  database.hpp  exceptions.hpp  field.hpp  headers.hpp  script_reader.hpp  span.hpp  table.hpp  unreachable.hpp  varchar.hpp
src/bplus_tree/: bplus_tree.cpp  bplus_tree.hpp  internal_node.cpp  internal_node.hpp  keys.hpp  leaf_node.cpp  leaf_node.hpp  node.cpp  node.hpp
src/catalog/: catalog.hpp  table.hpp
src/engine/: database_handle.cpp  database_handle.hpp  engine.cpp  engine.hpp  master_table.hpp
src/exceptions/: engine_exceptions.hpp  exception.hpp  query_exceptions.hpp
src/field/: field.hpp  instantiator.hpp  operators.hpp  type.hpp  varchar.hpp
src/frame_manager/: frame_manager.hpp
src/frame_manager/cache/: cache.cpp  cache.hpp  frame.hpp  frame_view.cpp  frame_view.hpp
src/frame_manager/disk_manager/: disk_manager.cpp  disk_manager.hpp  page_id_t.hpp
src/frame_manager/free_list/: free_list.cpp  free_list.hpp  free_list_block.hpp
src/parser/: ast.hpp  parser.cpp  parser.hpp  query.hpp  token.hpp
src/planner/: compiler.cpp  compiler.hpp  planner.cpp  planner.hpp
src/planner/iterators/: create.hpp  drop.hpp  erase.hpp  filter.hpp  index_scan.hpp  insert.hpp  iterator.hpp  project.hpp  table_scan.hpp  update.hpp  values.hpp
src/row/: field.hpp  row.cpp  row.hpp  row_view.hpp  schema.hpp
src/row_set/: row_iterator.cpp  row_iterator.hpp  row_set.cpp  row_set.hpp  row_set_impl.hpp
src/validator/: constants.hpp  defaults.hpp  query.hpp  validator.cpp  validator.hpp
tests/: CMakeLists.txt  test_byte_io.cpp  test_varchar.cpp  utils.cpp  utils.hpp
tests/bplus_tree/: test_bplus_tree.cpp  test_internal_node.cpp  test_node.cpp  test_node.hpp
tests/frame_manager/cache/: test_cache.cpp
tests/frame_manager/disk_manager/: test_disk_manager.cpp
tests/frame_manager/free_list/: test_free_list.cpp  test_free_list_block.cpp
tests/integration/: CMakeLists.txt  README.md  directory_iterable.hpp  executor.hpp  gen_data.py  gen_tests.py  integration_test_paths.hpp.in  runner.cpp
tests/integration/data/: schema.json
tests/integration/output/: 001_create.out  001_insert_select.out  003_select.out  004_delete.out  004_update.out  005_drop.out  006_primary.out  007_where.out  008_where_primary.out  101_invalid_create.out  102_invalid_insert.out  102_invalid_select.out  103_invalid_update.out  104_invalid_delete.out  106_invalid_primary.out  107_invalid_where.out  201_multi_update.out  201_multi_where.out  301_master.out  301_rowid.out  401_insert_small_random.out  402_insert_large_seq.out  407_insert_update_random.out  408_update_texts_random.out  410_insert_update_delete_random.out  412_delete_cascade_random.out  413_drop_random.out
tests/integration/scripts/: 000_create.sql  001_create.sql  001_insert_select.sql  002_insert_select.sql  002_select.sql  003_select.sql  003_update.sql  004_delete.sql  004_update.sql  005_delete.sql  005_drop.sql  005_primary.sql  006_primary.sql  006_where.sql  007_where.sql  007_where_primary.sql  008_where_primary.sql  100_invalid_create.sql  101_invalid_create.sql  101_invalid_insert.sql  102_invalid_insert.sql  102_invalid_select.sql  103_invalid_select.sql  103_invalid_update.sql  104_invalid_delete.sql  104_invalid_update.sql  105_invalid_delete.sql  105_invalid_drop.sql  105_invalid_primary.sql  106_invalid_primary.sql  106_invalid_where.sql  107_invalid_where.sql  200_multi_update.sql  201_multi_update.sql  201_multi_where.sql  202_multi_where.sql  300_master.sql  301_master.sql  301_rowid.sql  302_rowid.sql  (+2 more)
tests/unit/: CMakeLists.txt  test_byte_io.cpp  test_varchar.cpp  unit_test_paths.hpp.in  utils.cpp  utils.hpp
tests/unit/bplus_tree/: test_bplus_tree.cpp  test_internal_node.cpp  test_leaf_node.cpp  test_node.cpp  test_node.hpp
tests/unit/frame_manager/: test_cache.cpp  test_disk_manager.cpp  test_free_list.cpp  test_free_list_block.cpp
tests/unit/script_reader/: comments.sql  multi_statements.sql  multi_statements_multi_lines.sql  multi_statements_one_line.sql  separators.sql  stress_test.sql  test_script_reader.cpp  whitespace.sql
